--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "op learning nosql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed-iptv": "node build/seeders/seed-iptv-data"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.144",
     "@types/mongodb": "^3.3.6",
+    "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.3",
