--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed-iptv": "node build/seeders/seed-iptv-data"
+    "seed-iptv": "node build/seeders/seed-iptv-data",
+    "start": "node build/app/app",
+    "build": "tsc",
+    "dev": "npm run build && npm run start"
   },
   "repository": {
     "type": "git",
@@ -18,9 +21,11 @@
   },
   "homepage": "https://github.com/lintshy/batcave.nosqlrealm#readme",
   "dependencies": {
+    "@types/express": "^4.17.1",
     "@types/lodash": "^4.14.144",
     "@types/mongodb": "^3.3.6",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.3",
