--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "dev": "npm run build && npm run start",
     "parseText": "node src/static/parseTextToJson",
-    "pm2start": "npm run build && pm2 start build/app/app.js"
+    "pm2start": "npm run build && pm2 start build/app/app.js --name iptv-container",
+    "pm2stop": "pm2 stop iptv-container"
   },
   "repository": {
     "type": "git",
