--- a/app.yaml
+++ b/app.yaml
@@ -2,3 +2,6 @@
 # [START runtime]
 runtime: nodejs10
 # [END runtime]
+env_variables:
+  MONGO_URL: "mongodb+srv://nightwing:ErfXxQqCJrjVU4uD@batcave-db-adk1i.gcp.mongodb.net/batcave-db?retryWrites=true&w=majority"
+PORT: 3030
