--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed-iptv": "node build/seeders/seed-iptv-data",
+    "delete-iptv": "node build/seeders/delete-iptv",
     "start": "node build/app/app",
     "build": "tsc",
     "dev": "npm run build && npm run start",
-    "parseText": "node src/static/parseTextToJson",
+    "parseText": "node src/static/parse-playlist",
     "pm2start": "npm run build && pm2 start build/app/app.js --name iptv-container && pm2 monit",
     "pm2stop": "pm2 stop iptv-container"
   },
